zero-schema-macros/tests/ui/fail/05_generated_collision.rs
use zero_schema_macros::zero;

#[zero]
struct Collision {
    access: u8,
}

fn main() {}
